<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_colored"
            android:contentDescription="@string/green_logo" />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="20dp">

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:background="@drawable/curved_bg"
               android:contentDescription="@string/signin_image"
               android:scaleType="centerCrop"
               android:src="@drawable/sign_in_image" />

           <ImageView
               android:layout_width="115dp"
               android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               android:layout_marginStart="30dp"
               android:layout_marginTop="30dp"
               android:layout_marginEnd="30dp"
               android:layout_marginBottom="30dp"
               android:scaleType="centerInside"
               android:contentDescription="@string/logo"
               android:src="@drawable/logo"
               app:tint="#DCD9D9" />

       </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="26sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_re_glad_to_have_you_back"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:textColor="#3A3A3A"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:textColor="#3A3A3A"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reginaldabiepepple_gmail_com"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textColor="#3A3A3A"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sparta7699"
            android:drawableEnd="@drawable/password"
            app:passwordToggleEnabled="true"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_ibook"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_up_an_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>